k8s/platform/mesh/overlays/local/linkerd-webhook-ca-bundle-patches.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: linkerd-proxy-injector-webhook-config
webhooks:
  - name: linkerd-proxy-injector.linkerd.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ3ekNDQVdtZ0F3SUJBZ0lVUUZjcnN4cFYvREdmNGRZOUFRenJlOG00UENNd0NnWUlLb1pJemowRUF3SXcKTnpFMU1ETUdBMVVFQXd3c2JHbHVhMlZ5WkMxM1pXSm9iMjlyY3k1c2IyTmhiQzVzYVc1clpYSmtMbU5zZFhOMApaWEl1Ykc5allXd3dIaGNOTWpZd05ERTVNVGN3TVRVNVdoY05Nell3TkRFMk1UY3dNVFU1V2pBM01UVXdNd1lEClZRUUREQ3hzYVc1clpYSmtMWGRsWW1odmIydHpMbXh2WTJGc0xteHBibXRsY21RdVkyeDFjM1JsY2k1c2IyTmgKYkRCWk1CTUdCeXFHU000OUFnRUdDQ3FHU000OUF3RUhBMElBQkRPSytWZlFXSERjL0dDS1dyTXJKOWgyV0dtZgpUMU5DZ0pUQUVu [...]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: linkerd-policy-validator-webhook-config
webhooks:
  - name: linkerd-policy-validator.linkerd.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ3ekNDQVdtZ0F3SUJBZ0lVUUZjcnN4cFYvREdmNGRZOUFRenJlOG00UENNd0NnWUlLb1pJemowRUF3SXcKTnpFMU1ETUdBMVVFQXd3c2JHbHVhMlZ5WkMxM1pXSm9iMjlyY3k1c2IyTmhiQzVzYVc1clpYSmtMbU5zZFhOMApaWEl1Ykc5allXd3dIaGNOTWpZd05ERTVNVGN3TVRVNVdoY05Nell3TkRFMk1UY3dNVFU1V2pBM01UVXdNd1lEClZRUUREQ3hzYVc1clpYSmtMWGRsWW1odmIydHpMbXh2WTJGc0xteHBibXRsY21RdVkyeDFjM1JsY2k1c2IyTmgKYkRCWk1CTUdCeXFHU000OUFnRUdDQ3FHU000OUF3RUhBMElBQkRPSytWZlFXSERjL0dDS1dyTXJKOWgyV0dtZgpUMU5DZ0pUQUVu [...]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: linkerd-sp-validator-webhook-config
webhooks:
  - name: linkerd-sp-validator.linkerd.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ3ekNDQVdtZ0F3SUJBZ0lVUUZjcnN4cFYvREdmNGRZOUFRenJlOG00UENNd0NnWUlLb1pJemowRUF3SXcKTnpFMU1ETUdBMVVFQXd3c2JHbHVhMlZ5WkMxM1pXSm9iMjlyY3k1c2IyTmhiQzVzYVc1clpYSmtMbU5zZFhOMApaWEl1Ykc5allXd3dIaGNOTWpZd05ERTVNVGN3TVRVNVdoY05Nell3TkRFMk1UY3dNVFU1V2pBM01UVXdNd1lEClZRUUREQ3hzYVc1clpYSmtMWGRsWW1odmIydHpMbXh2WTJGc0xteHBibXRsY21RdVkyeDFjM1JsY2k1c2IyTmgKYkRCWk1CTUdCeXFHU000OUFnRUdDQ3FHU000OUF3RUhBMElBQkRPSytWZlFXSERjL0dDS1dyTXJKOWgyV0dtZgpUMU5DZ0pUQUVu [...]
